# pygeoops

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  LICENSE.txt  MANIFEST.in  README.md  environment-dev.yml  pygeoopsdev.yml  pyproject.toml  setup.py
.github/workflows/: release_tag_to_pypi  release_tag_to_pypi.yml  tests.yml
benchmark/: __init__.py  benchmark_all.py  benchmark_alternatives.py  benchmark_pygeoops.py  benchmarker.py  reporter.py
benchmark/benchmarks/: benchmarks_alternatives.py  benchmarks_pygeoops.py  testdata.py
benchmark/results/: benchmark_results.csv
ci/envs/: 310-latest-conda-forge.yaml  310-latest-no-optional-deps.yaml  310-latest-no-simplification.yaml  310-latest.yaml  311-latest-conda-forge-pygeos.yaml  311-latest-conda-forge.yaml  311-latest.yaml  38-latest-conda-forge.yaml  38-latest.yaml  38-minimal-pygeos.yaml  39-latest-conda-forge.yaml  39-latest.yaml  dev-deps.yml  latest-no-optional-deps.yaml  latest-no-optional-deps.yml  latest.yml  minimal-pygeos.yml  minimal.yml  readthedocs.yml
docs/: conf.py  development.rst  getting_started.rst  index.rst  make_rst.bat  reference.rst  user_guide.rst
docs/code/: buffer_by_m_different_cases.py  centerline_basic.py  centerline_l_shape.py  centerline_options.py  figures.py  simplify_basic.py  simplify_keep_points_on.py
pygeoops/: __init__.py  _buffer_by_m.py  _centerline.py  _compat.py  _difference.py  _extend_line.py  _general.py  _grid.py  _interpolate.py  _longest_line.py  _paramvalidation.py  _simplify.py  _simplify_lang.py  _simplify_topo.py  _types.py  _view_angles.py  centerline.py  version.txt  view_angles.py
tests/: test_buffer_by_m.py  test_centerline.py  test_difference.py  test_extend_line.py  test_general.py  test_geopandas.py  test_grid.py  test_helper.py  test_interpolate.py  test_longestline.py  test_paramvalidation.py  test_shapely.py  test_simplify.py  test_simplify_lang.py  test_simplify_topo.py  test_types.py  test_view_angles.py
