[project]
name = "pygeoops"
dynamic = ["version"]

authors = [
  { name="Pieter Roggemans", email="pieter.roggemans@gmail.com" },
]
description = "Library with some less common or extended spatial functions"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# Any dependencies added here should also be added to build-system.requires
dependencies = [
    "geopandas>=0.12.1",
    "numpy",
    "pyproj",
    "shapely>1",
    "topojson",
]
keywords = ["GIS", "cartography", "pandas", "shapely", "geopandas"]

[project.optional-dependencies]
# development dependency groups
full = ["simplification"]

[project.urls]
"Homepage" = "https://github.com/pygeoops/pygeoops"
"Bug Tracker" = "https://github.com/pygeoops/pygeoops/issues"

[build-system]
# All required runtime dependencies necessary as well to be able to get the __version__
requires = [
    "setuptools>=68.0",
    "geopandas>=0.12.1",
    "numpy",
    "pyproj",
    "shapely>1",
    "topojson",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "pygeoops.__version__"}

[tool.setuptools]
packages = ["pygeoops"]

[tool.mypy]
[[tool.mypy.overrides]]
module = "geofileops.*,geopandas.*,matplotlib.*,setuptools.*,simplification.*,shapely.*,topojson.*"
ignore_missing_imports = true

[tool.pyright]
exclude = ["local_ignore"]
ignore = ["*"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 88
extend-exclude = ["docs/conf.py", "local_ignore/*"]

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle
    "W",
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "PTH",  # flake8-pathlib
    "T10",  # flake8-debugger
    # "SIM",  # flake8-simplify
    "PLC",  # pylint
    "PLE",
    "PLR",
    "PLW",
    "PIE",  # misc lints
    "ISC",  # implicit string concatenation
    "TCH",  # type-checking imports
    "C4",  # comprehensions
    "RUF",  # Ruff-specific rules
    "I",  # isort
    "D",  # pydocstyle
]

ignore = [
    ### Intentionally disabled
    "E402",  # module level import not at top of file
    "E731",  # do not assign a lambda expression, use a def
    "B006",  # mutable-argument-default
    "B007",  # unused-loop-control-variable
    "B009",  # get-attr-with-constant
    "C408",  # dict literals
    "PLR0913",  # Too many arguments to function call
    "PLR0911",  # Too many returns
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic number
    "PLW2901",  # Redefined loop name
    "PLW0603",  # Global statements are discouraged
    "PLC1901",  # compare-to-empty-string
    "RUF005",  # collection-literal-concatenation
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"perftests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
